kubernetes/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels: {app: users}
  template:
    metadata:
      labels: {app: users}
    spec:
      containers:
      - name: users
        image: rrolface/users-service:v1
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
spec:
  selector: {app: users}
  ports:
  - port: 80
    targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels: {app: products}
  template:
    metadata:
      labels: {app: products}
    spec:
      containers:
      - name: products
        image: rrolface/products-service:v1
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: microapp
spec:
  selector: {app: products}
  ports:
  - port: 80
    targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels: {app: orders}
  template:
    metadata:
      labels: {app: orders}
    spec:
      containers:
      - name: orders
        image: rrolface/orders-service:v1
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
spec:
  selector: {app: orders}
  ports:
  - port: 80
    targetPort: 3003
